[package]
name = "price-oracle"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
clap = { version = "4.6.0", features = ["derive"] }
elements = "0.26.1"
hex = "0.4.3"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.51.1", features = ["macros", "rt-multi-thread"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
validator = "0.20.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros", "migrate", "uuid", "chrono"] }
